--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,78 @@ body {
   padding: 0;
   font-family: sans-serif;
 }
+
+div {
+  box-sizing: border-box;
+}
+
+.panel,
+.navbar {
+  margin-bottom: 0px !important;
+}
+
+.link {
+  color: #333;
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+  cursor: pointer;
+}
+
+.panel-title a,
+.panel-title p {
+  text-transform: capitalize;
+  font-size: 22px;
+}
+
+.post {
+  border-top: 1px solid #d2d2d2;
+  display: block;
+}
+.post:last-child {
+  border-bottom: 1px solid #d2d2d2;
+}
+
+.post-list {
+  display: inline-block;
+  width: 100%;
+}
+
+.post-data {
+  display: inline-block;
+  margin-left: 20px;
+}
+
+.post-meta ul {
+  padding: 0px;
+  margin: 0px;
+}
+
+.post-meta ul li {
+  display: inline;
+  padding: 0px 10px 10px 0px;
+}
+
+.post .vote-counter {
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 20px;
+}
+
+.post .vote-counter .vote,
+.post .vote-counter .vote-score {
+  padding: 6px;
+}
+
+.post .vote-counter .vote span,
+.post .vote-counter .vote-score {
+  text-align: center;
+  line-height: 20px;
+  font-size: 20px;
+}
+
+.post .vote-counter .vote:hover {
+  cursor: pointer;
+}
